2007-02-03  Ulrich Drepper  <drepper@redhat.com>

	* po/sv.po: Update from translation team.

2007-02-02  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (open_socket): Minor size optimization.

2007-02-02  Jakub Jelinek  <jakub@redhat.com>

	* include/locale.h (__uselocale): Add libc_hidden_proto.
	* locale/uselocale.c (__uselocale): Add libc_hidden_def.

	* nscd/nscd_helper.c (open_socket): Use __gettimeofday instead of
	gettimeofday.

2007-02-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (PTR_MANGLE): Roll value before
	returning.
	(PTR_DEMANGLE): Real definition now that it's not the same as
	PRT_MANGLE anymore.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Likewise.

	* string/strerror_l.c: New file.
	* string/Makefile (routines): Add strerror_l.
	* string/string.h: Declare strerror_l.
	* string/Versions: Export strerror_l for GLIBC_2.6.

2007-01-31  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (open_socket): Now takes request type and key
	as parameter.  Construct request record.  Try sending request
	before the first poll use, it usually succeeds.  Adjust all
	callers.
	* nscd/nscd-client.h: Define MAXKEYLEN.
	* nscd/connections.c (nscd_run): Don't define MAXKEYLEN here.

2007-01-31  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd-client.h (__nscd_cache_search): Remove const qualifier
	from return value.
	* nscd/nscd_helper.c: Include string.h.
	(__nscd_cache_search): Remove const qualifier from return value.
	On strict alignment architectures check hash entry and data head
	alignment.
	* nscd/nscd_getpw_r.c (nscd_getpw_r): Don't crash or fail because
	mmapped data during GC cycle contains garbage.  If
	__nscd_drop_map_ref fails, decrement mapped->counter when returning
	error or if retrying with NO_MAPPING, only __nscd_unmap if counter
	dropped to 0.
	* nscd/nscd_getgr_r.c (nscd_getgr_r): Likewise.
	* nscd/nscd_initgroups.c (__nscd_getgrouplist): Likewise.