@@ -1,3 +1,13 @@
+2007-02-05  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #3957]
+	* posix/regcomp.c (parse_bracket_exp): Set '\n' bit rather than '\0'
+	bit for RE_HAT_LISTS_NOT_NEWLINE.
+	(build_charclass_op): Remove bogus comment.
+	* posix/Makefile (tests): Add bug-regex27 and bug-regex28.
+	* posix/bug-regex27.c: New test.
+	* posix/bug-regex28.c: New test.
+
 2007-02-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/sv.po: Update from translation team.
